# Copyright (C) 2000 The Cleveland Clinic Foundation <hazard@bio.ri.ccf.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

docs_hazpredfiles_DATA = filelist.xml header.htm image001.wmz \
	image002.gif image003.wmz image004.gif image005.wmz \
	image006.gif image007.wmz image008.gif image009.wmz \
	image010.gif image011.wmz image012.gif image013.wmz \
	image014.gif image015.wmz image016.gif image017.wmz \
	image018.gif image019.wmz image020.gif image021.wmz \
	image022.gif image023.wmz image024.gif image025.wmz \
	image026.gif oledata.mso

# Because the "make dist" target does not include DATA files...
EXTRA_DIST = $(docs_hazpredfiles_DATA)


