# Copyright (C) 2000 The Cleveland Clinic Foundation <hazard@bio.ri.ccf.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

docs_overview_DATA =filelist.xml header.htm image001.wmz \
	image002.gif image003.wmz image004.gif image005.wmz \
	image006.gif image007.wmz image008.gif image009.wmz \
	image010.gif image011.wmz image012.gif image013.wmz \
	image014.gif image015.wmz image016.gif image017.wmz \
	image018.gif image019.wmz image020.gif image021.wmz \
	image022.gif image023.wmz image024.gif image025.wmz \
	image026.gif image027.wmz image028.gif image029.wmz \
	image030.gif image031.wmz image032.gif image033.wmz \
	image034.gif image035.wmz image036.gif image037.wmz \
	image038.gif image039.wmz image040.gif image041.wmz \
	image042.gif image043.wmz image044.gif image045.wmz \
	image046.gif image047.wmz image048.gif image049.wmz \
	image050.gif image051.wmz image052.gif image053.wmz \
	image054.gif image055.wmz image056.gif image057.wmz \
	image058.gif image059.wmz image060.gif image061.wmz \
	image062.gif image063.wmz image064.gif image065.wmz \
	image066.gif image067.wmz image068.gif image069.wmz \
	image070.gif image071.wmz image072.gif image073.wmz \
	image074.gif image075.wmz image076.gif image077.wmz \
	image078.gif oledata.mso

# Because the "make dist" target does not include DATA files...
EXTRA_DIST = $(docs_overview_DATA)


